--- a/css/style.css
+++ b/css/style.css
@@ -803,10 +803,19 @@ img {
   cursor: pointer;
 }
 
+.backdrop-icon-svg {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop-icon:hover > .backdrop-icon-svg,
+.backdrop-icon:focus > .backdrop-icon-svg {
+  fill: var(--secondary-color);
+}
+
 .modal-h {
   display: block;
   margin-top: 40px;
-  margin-bottom: 30px;
+  margin-bottom: 12px;
   font-weight: bold;
   font-size: 20px;
   line-height: 1.15;
@@ -954,13 +963,15 @@ textarea {
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.form-checkbox:focus + .policy-icon {
+  box-shadow: 0 0 0 2px var(--secondary-color);
+}
+
 .form-checkbox:checked + .policy-icon {
   background-color: var(--secondary-color);
   fill: var(--secondary-color);
   background-image: url(../image/svg/icon-check.svg);
+  background-position: center;
   border-radius: 2px;
-}
-
-.form-checkbox:focus + .policy-icon {
-  border: 2px solid var(--secondary-color);
+  box-shadow: none;
 }
